--- a/themes/openideal_theme/scss/regions/_content.scss
+++ b/themes/openideal_theme/scss/regions/_content.scss
@@ -1,6 +1,6 @@
 .main-content-outer {
-  .main-content {
-    padding: 18px;
+  section.main-content {
+    padding: 30px 17px;
   }
   // Content site slogan.
   .main-site-logo {
@@ -33,8 +33,8 @@
     padding-right: 0;
   }
   .main-content-outer {
-    .main-content {
-      padding: 12px;
+    section.main-content {
+      padding: 14px 5px;
     }
   }
 }
