--- a/themes/openideal_theme/scss/regions/_footer.scss
+++ b/themes/openideal_theme/scss/regions/_footer.scss
@@ -51,7 +51,7 @@
 
 
 @media (max-width: 991px) {
-  .site-footer {
+  .mobile-idea-site-footer {
   background: $white;
   border-radius: 8px 8px 0 0;
 
@@ -122,17 +122,23 @@
         }
       }
     }
+  }
 
+  .site-footer {
+    display: none;
+  }
 
+  .mobile-idea-site-footer.site-footer {
+    display: block;
     .block-addtoany-block,
-    &--wrapper {
+    .site-footer--wrapper {
       display: none;
     }
   }
 }
 
 @media (max-width: 763px) {
-  .site-footer {
+  .mobile-idea-site-footer {
     padding: 0;
     .block-openideal-footer-mobile-footer-block .site-footer-mobile-block--element {
       font-size: 15px;
@@ -142,14 +148,14 @@
 }
 
 @media (max-width: 572px) {
-  .site-footer .block-openideal-footer-mobile-footer-block .site-footer-mobile-block--element {
+  .mobile-idea-site-footer .block-openideal-footer-mobile-footer-block .site-footer-mobile-block--element {
     font-size: 14px;
     padding-right: 1.5em;
   }
 }
 
 @media (max-width: 420px) {
-  .site-footer {
+  .mobile-idea-site-footer {
     .block-openideal-footer-mobile-footer-block {
       .site-footer-mobile-block--element {
         font-size: 12px;
@@ -174,7 +180,7 @@
 }
 
 @media (max-width: 400px) {
-  .site-footer .block-openideal-footer-mobile-footer-block .site-footer-mobile-block--element {
+  .mobile-idea-site-footer .block-openideal-footer-mobile-footer-block .site-footer-mobile-block--element {
     padding-right: 1.3em;
   }
 }
